--- a/milesnew.html
+++ b/milesnew.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <div class="header-content">
-            <h1>Your Successful Website Title</h1>
+            <h1>Welcome to Miles Technology</h1>
             <p>"The first rule of any technology used in a business is that automation applied to an efficient operation will magnify the efficiency. The second is that automation applied to an inefficient operation will magnify the inefficiency." - Bill Gates</p>
         </div>
     </header>
